<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.echange_rate.ExchangeRateActivity">

    <ImageView
        android:contentDescription="@string/logo_bcp"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/logo_bcp"
        app:layout_constraintBottom_toTopOf="@+id/clExchange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clExchange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/llSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/drawable_white_border_top_left"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/you_send" />

                <EditText
                    android:id="@+id/edtSend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:background="@null" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvCurrencySend"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="@drawable/drawable_blue_border_top_right"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:textColor="@color/white"
                tools:text="Dólares" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llSend">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/drawable_white_border_bottom_left"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/you_receive" />

                <TextView
                    android:id="@+id/tvReceive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvCurrencyReceive"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="@drawable/drawable_blue_border_bottom_right"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:textColor="@color/white"
                tools:text="Soles" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivChangeCurrency"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/drawable_white_circle"
            android:contentDescription="@string/change_currency"
            android:padding="4dp"
            android:src="@drawable/ic_synchronize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clExchange" />


    <TextView
        android:id="@+id/tvExchangeSell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        tools:text="Venta: 3.59"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/clExchange" />

    <TextView
        android:id="@+id/tvExchangeBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/clExchange"
        tools:text="Compra: 3.65" />


    <Button
        android:id="@+id/btnStartOperation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_margin="0dp"
        android:text="@string/start_your_operation"
        android:background="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>